src/test/ui/traits/negative-impls/negative-impl-sized.stderr
error: auto traits must not contain where bounds
  --> $DIR/negative-impl-sized.rs:7:1
   |
LL | impl<T> !MyTrait for T {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

